hphp/hack/test/typecheck/is_expression/invalid_hint_generic.php.exp
File "invalid_hint_generic.php", line 5, characters 5-15:
  mixed
File "invalid_hint_generic.php", line 4, characters 13-13:
The `is` operator cannot be used with a value of generic type T (Typing[4195])
